--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,6 @@
 .header {
   background-color: white;
-  min-height: 8%;
+  min-height: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -90,9 +90,9 @@
   .header__nav {
     position: absolute;
     display: none;
-    height: 87vh;
+    height: 88vh;
     width: 100%;
-    top: 14vh;
+    top: 11vh;
     background-color: white;
     z-index: 2;
     -webkit-box-pack: center;
